{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 102,
  "lineage": "3124e4bf-ebcf-d043-8bda-471238e67325",
  "resources": [
    {
      "module": "module.linux_vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linux-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-linux/providers/Microsoft.Network/networkInterfaces/lab-network-nic-n01605052-l-1",
            "internal_domain_name_suffix": "oy1jsltauyqerdfuap4z5esfjd.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01605052-l-ipconfig-1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-linux/providers/Microsoft.Network/publicIPAddresses/n01605052-l-1-pip",
                "subnet_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-network/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/lab-network-subnet-1"
              }
            ],
            "location": "canadacentral",
            "mac_address": "00-22-48-AE-59-02",
            "name": "lab-network-nic-n01605052-l-1",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "lab-linux",
            "tags": {
              "ContactEmail": "n01605052@humber.ca",
              "Environment": "Lab",
              "Name": "Terrafom-Class",
              "Project": "Learning"
            },
            "virtual_machine_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-linux/providers/Microsoft.Compute/virtualMachines/n01605052-l-1"
          },
          "dependencies": [
            "module.linux_vm.azurerm_public_ip.linux-ip",
            "module.network.azurerm_subnet.network-subnet1",
            "module.network.azurerm_virtual_network.network-vnet",
            "module.resource_group.azurerm_resource_group.linux-rg",
            "module.resource_group.azurerm_resource_group.network-rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-linux/providers/Microsoft.Network/networkInterfaces/lab-network-nic-n01605052-l-2",
            "internal_domain_name_suffix": "oy1jsltauyqerdfuap4z5esfjd.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01605052-l-ipconfig-2",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-linux/providers/Microsoft.Network/publicIPAddresses/n01605052-l-2-pip",
                "subnet_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-network/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/lab-network-subnet-1"
              }
            ],
            "location": "canadacentral",
            "mac_address": "00-22-48-AE-50-21",
            "name": "lab-network-nic-n01605052-l-2",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "lab-linux",
            "tags": {
              "ContactEmail": "n01605052@humber.ca",
              "Environment": "Lab",
              "Name": "Terrafom-Class",
              "Project": "Learning"
            },
            "virtual_machine_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-linux/providers/Microsoft.Compute/virtualMachines/n01605052-l-2"
          },
          "dependencies": [
            "module.linux_vm.azurerm_public_ip.linux-ip",
            "module.network.azurerm_subnet.network-subnet1",
            "module.network.azurerm_virtual_network.network-vnet",
            "module.resource_group.azurerm_resource_group.linux-rg",
            "module.resource_group.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.linux_vm",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "linux-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "n01605052-l-1",
            "fqdn": "n01605052-l-1.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-linux/providers/Microsoft.Network/publicIPAddresses/n01605052-l-1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.233.33.220",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01605052-l-1-pip",
            "resource_group_name": "lab-linux",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01605052@humber.ca",
              "Environment": "Lab",
              "Name": "Terrafom-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.linux-rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "n01605052-l-2",
            "fqdn": "n01605052-l-2.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-linux/providers/Microsoft.Network/publicIPAddresses/n01605052-l-2-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.233.33.214",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01605052-l-2-pip",
            "resource_group_name": "lab-linux",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01605052@humber.ca",
              "Environment": "Lab",
              "Name": "Terrafom-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.linux-rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "network-nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-network/providers/Microsoft.Network/networkSecurityGroups/lab-network-security-group-ssh",
            "location": "canadacentral",
            "name": "lab-network-security-group-ssh",
            "resource_group_name": "lab-network",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "network-nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-network/providers/Microsoft.Network/networkSecurityGroups/lab-network-security-group-rdp",
            "location": "canadacentral",
            "name": "lab-network-security-group-rdp",
            "resource_group_name": "lab-network",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule2",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "network-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-network/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/lab-network-subnet-1",
            "name": "lab-network-subnet-1",
            "resource_group_name": "lab-network",
            "virtual_network_name": "lab-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.network-vnet",
            "module.resource_group.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "network-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-network/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/lab-network-subnet-2",
            "name": "lab-network-subnet-2",
            "resource_group_name": "lab-network",
            "virtual_network_name": "lab-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.network-vnet",
            "module.resource_group.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "network-nsg1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-network/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/lab-network-subnet-1",
            "network_security_group_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-network/providers/Microsoft.Network/networkSecurityGroups/lab-network-security-group-ssh",
            "subnet_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-network/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/lab-network-subnet-1"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.network-nsg1",
            "module.network.azurerm_subnet.network-subnet1",
            "module.network.azurerm_virtual_network.network-vnet",
            "module.resource_group.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "network-nsg2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-network/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/lab-network-subnet-2",
            "network_security_group_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-network/providers/Microsoft.Network/networkSecurityGroups/lab-network-security-group-rdp",
            "subnet_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-network/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/lab-network-subnet-2"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.network-nsg2",
            "module.network.azurerm_subnet.network-subnet2",
            "module.network.azurerm_virtual_network.network-vnet",
            "module.resource_group.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "network-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2e993676-a660-4820-8cb4-03fd9f92454b",
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-network/providers/Microsoft.Network/virtualNetworks/lab-vnet",
            "location": "canadacentral",
            "name": "lab-vnet",
            "resource_group_name": "lab-network",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-network/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/lab-network-subnet-1",
                "name": "lab-network-subnet-1",
                "security_group": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-network/providers/Microsoft.Network/networkSecurityGroups/lab-network-security-group-ssh"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-network/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/lab-network-subnet-2",
                "name": "lab-network-subnet-2",
                "security_group": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-network/providers/Microsoft.Network/networkSecurityGroups/lab-network-security-group-rdp"
              }
            ]
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "module": "module.window_vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "win-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-windows/providers/Microsoft.Network/networkInterfaces/lab-network-nic-win-n01605052-w-1",
            "internal_domain_name_suffix": "oy1jsltauyqerdfuap4z5esfjd.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01605052-w-ipconfig-1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-windows/providers/Microsoft.Network/publicIPAddresses/n01605052-w-1-pip",
                "subnet_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-network/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/lab-network-subnet-2"
              }
            ],
            "location": "canadacentral",
            "mac_address": "00-22-48-AD-C9-61",
            "name": "lab-network-nic-win-n01605052-w-1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "lab-windows",
            "tags": {
              "ContactEmail": "n01605052@humber.ca",
              "Environment": "Lab",
              "Name": "Terrafom-Class",
              "Project": "Learning"
            },
            "virtual_machine_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-windows/providers/Microsoft.Compute/virtualMachines/n01605052-w-1"
          },
          "dependencies": [
            "module.network.azurerm_subnet.network-subnet2",
            "module.network.azurerm_virtual_network.network-vnet",
            "module.resource_group.azurerm_resource_group.network-rg",
            "module.resource_group.azurerm_resource_group.windows-rg",
            "module.window_vm.azurerm_public_ip.win-ip"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-windows/providers/Microsoft.Network/networkInterfaces/lab-network-nic-win-n01605052-w-2",
            "internal_domain_name_suffix": "oy1jsltauyqerdfuap4z5esfjd.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01605052-w-ipconfig-2",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-windows/providers/Microsoft.Network/publicIPAddresses/n01605052-w-2-pip",
                "subnet_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-network/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/lab-network-subnet-2"
              }
            ],
            "location": "canadacentral",
            "mac_address": "00-22-48-AE-CE-39",
            "name": "lab-network-nic-win-n01605052-w-2",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "lab-windows",
            "tags": {
              "ContactEmail": "n01605052@humber.ca",
              "Environment": "Lab",
              "Name": "Terrafom-Class",
              "Project": "Learning"
            },
            "virtual_machine_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-windows/providers/Microsoft.Compute/virtualMachines/n01605052-w-2"
          },
          "dependencies": [
            "module.network.azurerm_subnet.network-subnet2",
            "module.network.azurerm_virtual_network.network-vnet",
            "module.resource_group.azurerm_resource_group.network-rg",
            "module.resource_group.azurerm_resource_group.windows-rg",
            "module.window_vm.azurerm_public_ip.win-ip"
          ]
        }
      ]
    },
    {
      "module": "module.window_vm",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "win-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "n01605052-w-1",
            "fqdn": "n01605052-w-1.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-windows/providers/Microsoft.Network/publicIPAddresses/n01605052-w-1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.237.36.122",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01605052-w-1-pip",
            "resource_group_name": "lab-windows",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01605052@humber.ca",
              "Environment": "Lab",
              "Name": "Terrafom-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.windows-rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "n01605052-w-2",
            "fqdn": "n01605052-w-2.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/lab-windows/providers/Microsoft.Network/publicIPAddresses/n01605052-w-2-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.233.46.103",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01605052-w-2-pip",
            "resource_group_name": "lab-windows",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01605052@humber.ca",
              "Environment": "Lab",
              "Name": "Terrafom-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.windows-rg"
          ]
        }
      ]
    }
  ]
}